# Vocaria

./: .env.example.md  .gitignore  Vocaria Status Update - Fase 4A Widget Foundation.md  backup_before_fase3_20250601_2330.sql  create_tables.py  main.py  main.py.backup  package-lock.json  package.json  requirements.txt  test-api.sh  test-simple.sh  test-transcripts-fix.sh  test_api.sh  vocaria_status_update.md
docs/: Adr:0000-template.md  Api-spec.md  Ci-cd.md  Coding-guidelines.md  Contributing.md  Data-model.md  Glossary.md  ROLLBACK_PLAN.md  Security-privacy.md  Tasks.md  Tech-stack.md  Test-plan.md  Ux-admin.md  Ux-client.md  design-system.md  scripts-validation.md  vocaria-1.1-prd.md
docs/development/: windsurf_rules.md
frontend/: .env.backup  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: widget.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  client.ts.backup
frontend/src/components/: BackendConnectionTest.tsx  Chat.tsx  ConversationList.tsx  Login.tsx  Register.tsx
vocaria/backend/: alembic.ini  create_realistic_property.py  main.py  main.py.backup  main.py.backup_before_matterport_fix  migrate_to_real_estate.py  pyproject.toml  requirements.txt  run_migration.py  vocaria.db
vocaria/backend/alembic/: env.py
vocaria/backend/alembic/versions/: 344499fcdd47_initial_migration.py  eddf79366329_add_conversation_and_message_models.py
vocaria/backend/migrations/: add_matterport_fields.sql
vocaria/backend/src/: database.py  matterport_service.py  matterport_service.py.backup  models.py
vocaria/backend/src/vocaria/: auth.py  main.py
vocaria/backend/src/vocaria/api/: auth.py  conversations.py  files.py  leads.py  search.py  tours.py  usage.py
vocaria/backend/src/vocaria/api/v1/: api.py
vocaria/backend/src/vocaria/api/v1/endpoints/: auth.py
vocaria/backend/src/vocaria/config/: settings.py
vocaria/backend/src/vocaria/core/: logging.py  security.py
vocaria/backend/src/vocaria/db/: base.py  models.py  session.py
vocaria/backend/src/vocaria/db/models/: __init__.py  conversation.py  lead.py  tour.py  usage.py  user.py
vocaria/backend/src/vocaria/db/repositories/: base.py  conversation.py  lead.py  tour.py  usage.py  user.py
vocaria/backend/src/vocaria/schemas/: __init__.py  base.py  conversation.py  lead.py  msg.py  token.py  tour.py  usage.py  user.py
vocaria/backend/src/vocaria/services/: ai.py  analytics.py  auth.py  cache.py  conversation.py  conversation_messages.py  file.py  lead.py  search.py  tour.py  webhook.py
(+39 files in other folders)
